@startuml
skinparam classAttributeIconSize 0

class Guitar {
- serialNumber: String
- price: double
}

class GuitarSpec{
- builder: Builder
- model : String
- type: Type
- backWood: Wood
- topWood:Wood
- noStrings : Strings

+ getNoStrings() : String
}

class Inventory {
- list: List
+ search(Guitar) : List
+ addGuitar(Guitar)
+ getGuitar(String) : Guitar
+ isMatching() : bool
}

Guitar --o Inventory: aggregation
Guitar "0..*" -- GuitarSpec: has a


enum Type {
ELECTRIC
ACOUSTIC
}

enum Wood {
CEDAR
MAHOGANY
ALDER
}

enum Builder {
FENDER
MARTIN
GIBSON
COLLINGS
}

enum Strings{
SIX
TWELVE


}
@enduml